# atmaCup15

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/exp/exp001_concat/: concat.py  config.yaml
src/exp/exp001_seen/: config.yaml  feature_engineering.py  run.py
src/exp/exp001_unseen/: config.yaml  feature_engineering.py
src/features/: __init__.py  labelencoding.py
src/models/: __init__.py  base.py  model_lgbm.py  select_model.py
src/utils/: select_cv_method.py  visualizer.py
