[tool.poetry]
name = "atma15"
version = "0.1.0"
description = ""
authors = ["yuki mizuta"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.9.16"
ipykernel = "^6.19.4"
pandas = "^2.0.3"
numpy = "^1.17.3"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
omegaconf = "^2.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
category-encoders = "^2.6.1"
mlflow = "^2.4.2"
loguru = "^0.7.0"
matplotlib-venn = "^0.11.9"
notebook = "^6.5.4"
gensim = "^4.3.1"
ml-metrics = "0.1.2"
xfeat = "^0.1.1"
node2vec = "^0.4.6"
levenshtein = "^0.21.1"
faiss-gpu = "^1.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"
pytest = "^7.2.0"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"

[tool.flake8]
max-line-length = 119

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.mypy]
ignore_missing_imports = true
